--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,12 @@
 name = "silt"
 version = "0.1.0"
 edition = "2021"
+description = "A transparent batching proxy for the OpenAI API that accumulates real-time requests and dispatches at intervals using the OpenAI Batch API to achieve ~50% cost savings"
+license = "MIT"
+repository = "https://github.com/doublewordai/silt"
+homepage = "https://github.com/doublewordai/silt"
+keywords = ["openai", "batch", "proxy", "api", "cost-optimization"]
+categories = ["web-programming", "api-bindings"]
 
 [dependencies]
 # Async runtime
